--- a/starter_code/deployment.yaml
+++ b/starter_code/deployment.yaml
@@ -1,24 +1,19 @@
-# Kubernetes Deployment Template
-# TODO: Fill in the missing values
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web-app
-  labels:
-    app: web-app
+  name: nginx-deployment
 spec:
-  replicas: # TODO: Set number of replicas
+  replicas: 2
   selector:
     matchLabels:
-      app: # TODO: Match label
+      app: web-app
   template:
     metadata:
       labels:
-        app: # TODO: Pod label
+        app: web-app
     spec:
       containers:
-      - name: # TODO: Container name
-        image: # TODO: Image name (e.g., nginx:alpine)
+      - name: nginx-container
+        image: nginx:alpine
         ports:
-        - containerPort: # TODO: Port number
+        - containerPort: 80
